# tglitch

./: .clog.toml  .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  run.rs
